--- a/_posts/2025-05-13-123456.md
+++ b/_posts/2025-05-13-123456.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "JavaScript Promise 이해하기"
+title: "JavaScript Promise 개념"
 date: 2025-05-13
 category: JavaScript
 image: assets/img/blog/java.png
